--- a/docs/Intro.mdx
+++ b/docs/Intro.mdx
@@ -7,7 +7,7 @@ route: '/'
 
 [Create React App](https://github.com/facebook/create-react-app) (CRA) template to build and publish NPM libraries with **rollup**, **eslint** and **stylelint** configurations.
 
-## How it works
+## Purpose
 
 This template allows you to use CRA tooling to develop NPM library with some extra tools included. [`rollup.js`](https://rollupjs.org/guide/en/) is used to build the package for publishing.
 
