--- a/docs/Publish.mdx
+++ b/docs/Publish.mdx
@@ -1,6 +1,6 @@
 ---
-name: 'Publish and update library'
-route: '/publish_library'
+name: 'Publish and update'
+route: '/publish'
 ---
 
 ## First publication
