--- a/docs/Style.mdx
+++ b/docs/Style.mdx
@@ -71,7 +71,7 @@ module.exports = {
 
 5. Import `scss` files straight into Component.
 
-    ```js
+    ```jsx
     import React from 'react';
     import classes from './Component.module.scss'; // note the changed extension
 
@@ -80,7 +80,7 @@ module.exports = {
     )
     ```
 
-You can see all changes required to enable SASS/SCSS in [corresponding PR](https://github.com/morewings/cra-template-quickstart-redux/pull/16).
+You can see all changes required to enable SASS/SCSS in [corresponding PR](https://github.com/morewings/cra-template-npm-library/pull/11).
 
 ## Add PostCSS
 
@@ -152,7 +152,7 @@ You can see all changes required to enable SASS/SCSS in [corresponding PR](https
     }
     ```
 
-You can see all changes required to enable PostCSS in [corresponding PR](https://github.com/morewings/cra-template-quickstart-redux/pull/15).
+You can see all changes required to enable PostCSS in [corresponding PR](https://github.com/morewings/cra-template-npm-library/pull/12).
 
 ## Add Less
 
@@ -209,4 +209,4 @@ You can see all changes required to enable PostCSS in [corresponding PR](https:/
     }
     ```
 
-You can see all changes required to enable Less in [corresponding PR](https://github.com/morewings/cra-template-quickstart-redux/pull/17).
+You can see all changes required to enable Less in [corresponding PR](https://github.com/morewings/cra-template-npm-library/pull/10).
