--- a/docs/Test.mdx
+++ b/docs/Test.mdx
@@ -5,4 +5,4 @@ route: '/testing'
 
 # Testing
 
-Snapshot testing done with [react-testing-library](https://testing-library.com/docs/react-testing-library/intro). Example tests are included.
+Snapshot testing done with [jest](https://jestjs.io) [react-testing-library](https://testing-library.com/docs/react-testing-library/intro). Example tests are included.
