remove prepare.js

--- a/docs/Install.mdx
+++ b/docs/Install.mdx
@@ -12,10 +12,10 @@ route: '/install'
     ```shell script
     yarn create react-app %PROJECT_NAME% --template npm-library
     ```
-2. Run `prepare.js` script inside project directory.
+2. Start project.
 
     ```shell script
     cd %PROJECT_NAME%
-    node ./prepare.js # makes required package.json configuration
+    yarn start
     ```
 3. Commit changes.
