--- a/docs/Documentation.stories.mdx
+++ b/docs/Documentation.stories.mdx
@@ -1,14 +1,14 @@
----
-name: 'Documentation'
-route: '/documentation'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta title="Docs/Add documentation" />
+
 # Document your library
 
-Template has [Docz](https://www.docz.site/) configuration to handle documentation.
+Template has [Storybook](https://storybook.js.org/) configuration to handle documentation and examples.
 
 ```bash
-yarn start:docs # starts Docz in development mode, http://localhost:3000/
-yarn build:docs # builds Docz pages to `docz-dist` directory
+yarn start:docs # starts Storybook in development mode, http://localhost:3000/
+yarn build:docs # builds Storybook pages to `storybook-dist` directory
 ```
 
 ## Write
