--- a/docs/Install.stories.mdx
+++ b/docs/Install.stories.mdx
@@ -1,7 +1,6 @@
----
-name: 'Install'
-route: '/install'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta title="Docs/Install" />
 
 1. `npx` command installs most recent stable version of CRA from npm. `--template` parameter points to this template, note that `cra-template-` prefix is omitted.
 
