--- a/docs/Linters.stories.mdx
+++ b/docs/Linters.stories.mdx
@@ -1,7 +1,6 @@
----
-name: 'Code quality tools'
-route: '/linters'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta title="Docs/Linters" />
 
 # Code quality tools
 
