--- a/docs/Publish.stories.mdx
+++ b/docs/Publish.stories.mdx
@@ -1,7 +1,6 @@
----
-name: 'Publish and update'
-route: '/publish'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta title="Docs/Publish" />
 
 ## First publication
 
