--- a/docs/Style.stories.mdx
+++ b/docs/Style.stories.mdx
@@ -1,7 +1,6 @@
----
-name: 'Style options'
-route: '/style'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta title="Docs/Style options" />
 
 # Style options
 
