--- a/docs/Develop.stories.mdx
+++ b/docs/Develop.stories.mdx
@@ -1,7 +1,6 @@
----
-name: 'Develop library'
-route: '/develop_library'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta title="Docs/Develop" />
 
 ## Development mode
 
