--- a/docs/Intro.stories.mdx
+++ b/docs/Intro.stories.mdx
@@ -1,7 +1,6 @@
----
-name: 'Intro'
-route: '/'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta title="Docs/Intro" />
 
 ## Description
 
