--- a/docs/Test.stories.mdx
+++ b/docs/Test.stories.mdx
@@ -1,7 +1,6 @@
----
-name: 'Testing'
-route: '/testing'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta title="Docs/Testing" />
 
 # Testing
 
