--- a/docs/Documentation.stories.mdx
+++ b/docs/Documentation.stories.mdx
@@ -1,13 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta
-  parameters={{
-    viewMode: 'docs',
-    previewTabs: {
-      canvas: { hidden: true }
-    },
-  }}
-  title="Docs/Add documentation" />
+<Meta title="Docs/Add documentation" />
 
 # Document your library
 
@@ -19,8 +12,8 @@ yarn build:docs # builds Storybook pages to `storybook-dist` directory
 ```
 
 ## Write
-To document component or module simply create `story` file as `.js` or `.stories.mdx` extension, more info [here](https://storybook.js.org/docs/react/writing-stories/introduction).
+To document component or module simply create file with `.mdx` extension, more info [here](https://www.docz.site/docs/writing-mdx).
 
 ## Deploy
-After package is published you can build and host documentation at Github Pages or Netlify, using [this manual](https://storybook.js.org/tutorials/intro-to-storybook/react/en/deploy/).
+After package is published you can build and host documentation at Github Pages or Netlify, using [this manual](https://www.docz.site/docs/deploying-your-docs).
 
