--- a/docs/Documentation.stories.mdx
+++ b/docs/Documentation.stories.mdx
@@ -12,8 +12,8 @@ yarn build:docs # builds Storybook pages to `storybook-dist` directory
 ```
 
 ## Write
-To document component or module simply create file with `.mdx` extension, more info [here](https://www.docz.site/docs/writing-mdx).
+To document component or module simply create `story` file as `.js` or `.stories.mdx` extension, more info [here](https://storybook.js.org/docs/react/writing-stories/introduction).
 
 ## Deploy
-After package is published you can build and host documentation at Github Pages or Netlify, using [this manual](https://www.docz.site/docs/deploying-your-docs).
+After package is published you can build and host documentation at Github Pages or Netlify, using [this manual](https://storybook.js.org/tutorials/intro-to-storybook/react/en/deploy/).
 
