--- a/docs/Develop.stories.mdx
+++ b/docs/Develop.stories.mdx
@@ -1,6 +1,13 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title="Docs/Develop" />
+<Meta
+  parameters={{
+    viewMode: 'docs',
+    previewTabs: {
+    canvas: { hidden: true }
+    },
+  }}
+  title="Docs/Develop" />
 
 ## Development mode
 
