--- a/docs/Documentation.stories.mdx
+++ b/docs/Documentation.stories.mdx
@@ -1,6 +1,13 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title="Docs/Add documentation" />
+<Meta
+  parameters={{
+    viewMode: 'docs',
+    previewTabs: {
+      canvas: { hidden: true }
+    },
+  }}
+  title="Docs/Add documentation" />
 
 # Document your library
 
