--- a/docs/Install.stories.mdx
+++ b/docs/Install.stories.mdx
@@ -1,6 +1,15 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title="Docs/Install" />
+<Meta
+  parameters={{
+    viewMode: 'docs',
+    previewTabs: {
+      canvas: { hidden: true }
+    },
+  }}
+  title="Docs/Install" />
+
+# Install
 
 1. `npx` command installs most recent stable version of CRA from npm. `--template` parameter points to this template, note that `cra-template-` prefix is omitted.
 
