--- a/docs/Linters.stories.mdx
+++ b/docs/Linters.stories.mdx
@@ -1,7 +1,13 @@
----
-name: 'Code quality tools'
-route: '/linters'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta
+  parameters={{
+    viewMode: 'docs',
+    previewTabs: {
+      canvas: { hidden: true }
+    },
+  }}
+  title="Docs/Linters" />
 
 # Code quality tools
 
