--- a/docs/Develop.stories.mdx
+++ b/docs/Develop.stories.mdx
@@ -1,7 +1,13 @@
----
-name: 'Develop library'
-route: '/develop_library'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta
+  parameters={{
+    viewMode: 'docs',
+    previewTabs: {
+    canvas: { hidden: true }
+    },
+  }}
+  title="Docs/Develop" />
 
 ## Development mode
 
