--- a/docs/Intro.stories.mdx
+++ b/docs/Intro.stories.mdx
@@ -1,7 +1,13 @@
----
-name: 'Intro'
-route: '/'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta
+  parameters={{
+    viewMode: 'docs',
+    previewTabs: {
+      canvas: { hidden: true }
+    },
+  }}
+  title="Docs/Intro" />
 
 ## Description
 
