--- a/docs/Publish.stories.mdx
+++ b/docs/Publish.stories.mdx
@@ -1,7 +1,13 @@
----
-name: 'Publish and update'
-route: '/publish'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta
+  parameters={{
+    viewMode: 'docs',
+    previewTabs: {
+      canvas: { hidden: true }
+    },
+  }}
+  title="Docs/Publish" />
 
 ## First publication
 
