--- a/docs/Style.stories.mdx
+++ b/docs/Style.stories.mdx
@@ -1,7 +1,13 @@
----
-name: 'Style options'
-route: '/style'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta
+  parameters={{
+    viewMode: 'docs',
+    previewTabs: {
+      canvas: { hidden: true }
+    },
+  }}
+  title="Docs/Style options" />
 
 # Style options
 
