--- a/docs/Test.stories.mdx
+++ b/docs/Test.stories.mdx
@@ -1,7 +1,13 @@
----
-name: 'Testing'
-route: '/testing'
----
+import { Meta } from '@storybook/addon-docs';
+
+<Meta
+  parameters={{
+    viewMode: 'docs',
+    previewTabs: {
+      canvas: { hidden: true }
+    },
+  }}
+  title="Docs/Testing" />
 
 # Testing
 
